# Softeer_Practice

./: .gitignore  CMakeLists.txt  README.md  buisiness_processing.cpp  complex_assemble_line.cpp  distance_driven.cpp  obstacle_recognition.cpp  safecracker.cpp  score_assesment.cpp  test.cpp  virus.cpp
